--- a/organigramme.html
+++ b/organigramme.html
@@ -123,7 +123,7 @@ h1{
 
 <script>
 
-const API = "TON_URL_EXEC?view=org"; 
+const API = "https://script.google.com/macros/s/AKfycbzPHCDdW7wkFCVkMOL_2srZmdnjZ1QKmToUFtqIZBPjSUNtOwM-Ac7ua0w9dhCv3oI/exec?view=org"; 
 // 🔴 REMPLACE TON_URL_EXEC PAR TON URL /exec
 
 function loadOrg(){
